--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-scikit-learn==1.3.0
-numpy==1.24.3
-requests==2.31.0
-gunicorn==21.2.0
+Flask>=2.3.0,<3.0.0
+Flask-CORS>=4.0.0
+scikit-learn>=1.3.0
+numpy>=1.24.0
+requests>=2.31.0
+gunicorn>=21.0.0
+Werkzeug>=2.3.7
