--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:netlify": "npm ci && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
