--- a/railway.toml
+++ b/railway.toml
@@ -8,3 +8,6 @@ healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[build.environment]
+PYTHON_VERSION = "3.10.12"
