FIX NETLIFY BUILD ERROR - Exclude Python files
- Added .netlifyignore to exclude Python backend files
- Updated netlify.toml to ignore Python dependencies
- Removed build:netlify script, using standard build
- This should fix the Python 3.10.12 installation error
- Netlify will only build frontend, not Python backend

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,17 @@
 [build]
   publish = "dist"
-  command = "npm run build:netlify"
+  command = "npm ci && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
+  
+# Ignore Python files during build
+[build.ignore]
+  requirements.txt
+  runtime.txt
+  route_optimization_server.py
+  route_optimization/
+  *.py
 
 [[redirects]]
   from = "/*"
