--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  publish = "dist"
   command = "npm ci && npm run build"
+  publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "18"
+  PYTHON_VERSION = "3.10"
 
 [[redirects]]
   from = "/*"
